# ct_recon_fdk_astra

./: .gitignore  README.md  pyproject.toml
ct_recon_fdk_astra/: __init__.py  recon_coverage.md  recon_coverage.py  reconstruct.py  test_recon_coverage.py
ct_recon_fdk_astra/data/example_data/: fullscan_180views_600x400.json  fullscan_180views_600x400.ompl  fullscan_90views_600x400.json  fullscan_90views_600x400.ompl
ct_recon_fdk_astra/fileformats/: __init__.py  astra.py  ompl.py  rtk.py  siemens.py  stanford.py  utils.py
ct_recon_fdk_astra/gui/: nrrd_view_3d.py  process_console.py  reconstruction_gui.py
